# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.1
#

2005-01-28 18:33:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19

    Summary:
      get ready to release 1.1.0b5
    Revision:
      Localizer--main--1.1--patch-19


    modified files:
     CHANGES.txt Changelog version.txt


2005-01-24 17:21:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-18

    Summary:
      update portuguese translation, by Rodrigo Senra
    Revision:
      Localizer--main--1.1--patch-18


    modified files:
     Changelog locale/pt.po


2005-01-24 14:20:10 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-17

    Summary:
      portuguese translation updated, by Rodrigo Senra
    Revision:
      Localizer--main--1.1--patch-17


    modified files:
     Changelog locale/pt.po


2005-01-21 18:04:26 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-16

    Summary:
      update translations (run "make po")
    Revision:
      Localizer--main--1.1--patch-16


    modified files:
     Changelog Makefile locale/ca.po locale/de.po locale/es.po
     locale/eu.po locale/fr.po locale/hu.po locale/it.po
     locale/ja.po locale/locale.pot locale/pt.po locale/ru.po


2005-01-21 17:13:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-15

    Summary:
      now PTS and Localizer's translation service work together
    Revision:
      Localizer--main--1.1--patch-15

    This has been achieved thorugh patching of PlacelessTranslationService.

    modified files:
     Changelog __init__.py


2005-01-21 16:04:46 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-14

    Summary:
      new LocalContent user interface (by Cornel Nitu)
    Revision:
      Localizer--main--1.1--patch-14


    new files:
     img/.arch-ids/obsolete.gif.id img/obsolete.gif
     ui/.arch-ids/LPM_translations.dtml.id ui/LPM_translations.dtml

    modified files:
     Changelog LocalPropertyManager.py RELEASE-1.1.0.txt.en