@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/Localizer--main--1.1
 #
 
+2005-01-30 10:35:24 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-20
+
+    Summary:
+      make manage_editLocalProperty more robust
+    Revision:
+      Localizer--main--1.1--patch-20
+
+
+    modified files:
+     Changelog LocalPropertyManager.py
+
+
 2005-01-28 18:33:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-19
 
     Summary:
